--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,5 +28,7 @@
       <p>There are currently no blogs to display.</p>
       <% } %>
     </ol>
+    <h2>Submit a New Blog!</h2>
+    <form action="/create" method="POST"></form>
   </body>
 </html>
