--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -30,16 +30,20 @@
   </head>
   <body>
     <div class="container-fluid">
-      <h1><%= blog.title %></h1>
-      <p><%= blog.content %></p>
-      <form action="/edit/<%= blog._id %>" method="GET">
-        <button type="submit" class="btn btn-dark">Edit Post</button>
-      </form>
-      <br />
-      <!-- to delete a blog, we need the route and id in a form -->
-      <form action="/delete/<%= blog._id %>" method="POST">
-        <button type="submit" class="btn btn-dark">Delete</button>
-      </form>
+      <h2>Edit blog: <%= blog.title %></h2>
+      <div class="blog-entry">
+        <form action="/update/<%= blog._id %>" method="POST">
+          <label for="title">Enter a Title:</label>
+          <input type="text" id="title" name="title" required />
+          <label for="summary">Enter a Short Description:</label>
+          <input type="text" id="summary" name="summary" required />
+          <label for="content">Blog Content:</label>
+          <br />
+          <textarea id="content" name="content" required></textarea>
+          <br />
+          <button type="submit" class="btn btn-dark">Submit</button>
+        </form>
+      </div>
     </div>
   </body>
 </html>
